END OF SECTION 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  },
+  "TokenKey": "super secret unguessable key2super secret unguessable key3super secret unguessable key4super secret unguessable key5super secret unguessable key"
 }
