--- a/client/package.json
+++ b/client/package.json
@@ -18,25 +18,26 @@
     "@angular/platform-browser": "^16.2.1",
     "@angular/platform-browser-dynamic": "^16.2.1",
     "@angular/router": "^16.2.1",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.1",
+    "bootswatch": "^5.3.1",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^10.2.0",
-    "ngx-toastr": "^16.2.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "ngx-bootstrap": "^11.0.2",
+    "ngx-toastr": "^17.0.2",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.1",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "@types/jasmine": "~4.3.5",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.1.6"
   }
 }
