--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.1",
+    "@angular/cdk": "^16.2.6",
     "@angular/common": "^16.2.1",
     "@angular/compiler": "^16.2.1",
     "@angular/core": "^16.2.1",
@@ -21,6 +22,7 @@
     "bootstrap": "^5.3.1",
     "bootswatch": "^5.3.1",
     "font-awesome": "^4.7.0",
+    "ng-gallery": "^11.0.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.1",
